--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="navbar-brand">
         <a class="navbar-item" href="https://bulma.io">
           <img
-            src="https://bulma.io/images/bulma-logo.png"
+            src="https://openclipart.org/image/800px/299098"
             alt="Bulma: Free, open source, and modern CSS framework based on Flexbox"
             width="112"
             height="28"
@@ -41,7 +41,7 @@
         like the one you're currently reading.
       </h2>
     </section>
-    <section class="section is-small">
+    <section class="columns is-small is-centered">
       <div class="field has-addons">
         <div class="control">
           <input class="input" type="text" placeholder="Find a repository" />
@@ -51,29 +51,29 @@
         </div>
       </div>
     </section>
-    <section class="section is-small level">
-      <figure class="image is-128x128">
+    <section class="section is-small level is-justify-content-space-evenly">
+      <figure class="image is-256x256">
         <img
           class="is-rounded"
-          src="https://bulma.io/images/placeholders/128x128.png"
+          src="https://bulma.io/images/placeholders/256x256.png"
         />
       </figure>
-      <figure class="image is-128x128">
+      <figure class="image is-256x256">
         <img
           class="is-rounded"
-          src="https://bulma.io/images/placeholders/128x128.png"
+          src="https://bulma.io/images/placeholders/256x256.png"
         />
       </figure>
-      <figure class="image is-128x128">
+      <figure class="image is-256x256">
         <img
           class="is-rounded"
-          src="https://bulma.io/images/placeholders/128x128.png"
+          src="https://bulma.io/images/placeholders/256x256.png"
         />
       </figure>
-      <figure class="image is-128x128">
+      <figure class="image is-256x256">
         <img
           class="is-rounded"
-          src="https://bulma.io/images/placeholders/128x128.png"
+          src="https://bulma.io/images/placeholders/256x256.png"
         />
       </figure>
     </section>
@@ -96,6 +96,15 @@
       </h3>
     </div>
     </section>
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+          </p>
+        </div>
+      </footer>
     <scrip src="script.js"></scrip>
   </body>
 </html>
