created Api need to fix bug

--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
       </h2>
     </section>
     <section class="section is-small">
-      <div class="field has-addons">
-        <div class="control">
-          <input class="input" type="text" placeholder="Find a repository" />
+      <div id= "user-form" class="field has-addons">
+        
+        <div  class="control">
+          <input id="cnt-name" class="input" type="text" placeholder="Find a repository" />
         </div>
         <div class="control">
           <a class="button is-info"> Search </a>
         </div>
+    
       </div>
     </section>
     <section class="section is-small level">
@@ -97,5 +99,6 @@
     </div>
     </section>
     <scrip src="script.js"></scrip>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </body>
 </html>
