added a function that allows us to link our second page

--- a/secondindex.html
+++ b/secondindex.html
@@ -43,7 +43,8 @@
       </figure>
     </section>
     <section class="section is-small">
-      <p>sfhgkjsfhjsfhsljfhksfhskjfhskfhsfkshfkshfksf</p>
+      <h1 class="has-text-weight-bold is-size-1">Bird Name</h1>
+      <h2 class="has-text-weight-medium is-size-3">Fun Facts</h2>
       <ul>
         <li>hdsahd</li>
         <li>hdsahd</li>
