--- a/Assets/secondindex.html
+++ b/Assets/secondindex.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/secondpagestyle.css" />
     <title>Bird Project</title>
   </head>
   <body>
@@ -43,14 +43,12 @@
       </figure>
     </section>
     <section class="section is-small">
-      <h1 class="has-text-weight-bold is-size-1">Bird Name</h1>
+      <h1 class="has-text-weight-bold is-size-1" id="englishName">Bird Name</h1>
       <h2 class="has-text-weight-medium is-size-3">Fun Facts</h2>
       <ul>
-        <li>hdsahd</li>
-        <li>hdsahd</li>
-        <li>hdsahd</li>
-        <li>hdsahd</li>
-        <li>hdsahd</li>
+        <li>Scientific Name: <span id="scienceName"></span></li>
+        <li>Country recording took place: <span id="countryRec"></span></li>
+        <li>City recording took place: <span id="cityRec"></span></li>
       </ul>
     </section>
 
@@ -64,6 +62,7 @@
         </div>
       </div>
     </section>
-    <scrip src="script.js"></scrip>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./js/secondpage.js"></script>
   </body>
 </html>
