--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Assets/css/style.css" />
     <title>Bird Project</title>
   </head>
   <body>
@@ -35,7 +35,7 @@
       </div>
     </nav>
     <section class="section is-medium section is-centered">
-      <h1 class="title">HERO TITLE</h1>
+      <h1 class="title" id="test">HERO TITLE</h1>
       <h2 class="subtitle">
         A simple container to divide your page into <strong>sections</strong>,
         like the one you're currently reading.
@@ -127,7 +127,7 @@
         </div>
       </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-     <script src="script.js"></script>
+     <script src="./Assets/js/script.js"></script>
     
   </body>
 </html>
