succesfully fetching from both APIs

--- a/Assets/secondindex.html
+++ b/Assets/secondindex.html
@@ -37,10 +37,15 @@
     <section class="section is-medium section is-centered">
       <figure class="image is-128x128">
         <img
+          id="fetchedPhoto"
           class="is-rounded"
           src="https://bulma.io/images/placeholders/128x128.png"
         />
       </figure>
+      <br />
+      <a id="downBtn"
+        ><button class="button is-medium is-link">Download Recording</button></a
+      >
     </section>
     <section class="section is-small">
       <h1 class="has-text-weight-bold is-size-1" id="englishName">Bird Name</h1>
