--- a/index.html
+++ b/index.html
@@ -71,28 +71,32 @@
     
     <section class="section is-small level is-justify-content-space-evenly">
       <figure class="image is-256x256">
+        <a id="parrotButton">
         <img
           class="is-rounded"
-          src="https://bulma.io/images/placeholders/256x256.png"
-        />
+          src="https://images.pexels.com/photos/1599533/pexels-photo-1599533.jpeg"
+        /></a>
       </figure>
       <figure class="image is-256x256">
-        <img
-          class="is-rounded"
-          src="https://bulma.io/images/placeholders/256x256.png"
-        />
+        <a id="baldEagleButton">
+          <img
+            class="is-rounded"
+            src="https://upload.wikimedia.org/wikipedia/commons/1/1a/About_to_Launch_%2826075320352%29.jpg"
+          /></a>
       </figure>
       <figure class="image is-256x256">
-        <img
-          class="is-rounded"
-          src="https://bulma.io/images/placeholders/256x256.png"
-        />
+        <a id="blueJayButton">
+          <img
+            class="is-rounded"
+            src="https://nas-national-prod.s3.amazonaws.com/styles/api_hero_bird_with_crop_1920_1200/public/birds/hero_image/sfw_fixed_01-29-2011-223.jpg?tok=1671176071"
+          /></a>
       </figure>
       <figure class="image is-256x256">
-        <img
-          class="is-rounded"
-          src="https://bulma.io/images/placeholders/256x256.png"
-        />
+        <a id="andeanCondorButton">
+          <img
+            class="is-rounded"
+            src="https://i.guim.co.uk/img/media/6b021b9f22ab0507dfcbc8617d39cad72287a712/0_70_5000_3000/master/5000.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=18d8320c286d5c5c14d2027393ef123a"
+          /></a>
       </figure>
     </section>
     <section class="section is-medium">
