--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item has-text-black">
+          <a class="navbar-item has-text-black" href="#about-contact">
             About The Project
           </a>
         
-          <a class="navbar-item has-text-black">
+          <a class="navbar-item has-text-black" href="#about-contact">
             Meet The Team
           </a>
         </div>
@@ -188,7 +188,7 @@
 
  
 
-    <section class="section is-medium" id="about-contact">
+    <section class="section is-medium" id="about-contact" >
 
         <div class="columns">
             <div class="column">
