--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <section class="section is-medium section is-centered">
               <h1 class="title has-text-white" id="test" >Bird Project</h1>
               <h3 class="subtitle has-text-white">
-                If someone were to ask you to describe a bird, you probably would say it is a feathered creature that flies and lays eggs. These three characteristics do describe most birds, but the only characteristic that belongs exclusively to birds is the presence of feathers. Just as all mammals have hair, all birds have feathers. <strong class="has-text-white">Lets's discover other bird differences by checking out the bird repository!</strong>
+                If someone were to ask you to describe a bird, you probably would say it is a feathered creature that flies and lays eggs. These three characteristics do describe most birds, but the only characteristic that belongs exclusively to birds is the presence of feathers. Just as all mammals have hair, all birds have feathers. <strong class="has-text-white">Let's discover other bird differences by checking out the bird repository!</strong>
                 
               </h3>
               <div class="field has-addons">
@@ -212,7 +212,7 @@
                             </div>
                             <div class="card-body  p-3 p-xl-5">
                                 <h3 class="card-title h5">Indian Peafowl</h3>
-                                <p class="card-text">A truly majestic bird, their tails can be over 5 feet long! The national bird of India,and legend says the peafowl is able to charm snakes and addle their eggs! </p>
+                                <p class="card-text">A truly majestic bird, their tails can be over 5 feet long! The national bird of India, legend says the peafowl is able to charm snakes and addle their eggs! </p>
                                 <a href="#" id="indianPeafowlButton" class="btn btn-primary">See the Indian Peafowl!</a>
                             </div>
                         </div>
