--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
     <section class="section" id="hero" >
       <div class="container">
         <div class="columns">
+          <div id="modal" class="modal">
+            <div class="modal-background"></div>
+            <div class="modal-content">
+              <div class="box has-text-centered has-background-grey-lighter">
+                <p class="has-text-weight-bold" id="mText"></p>
+              </div>
+            </div>
+            <button class="modal-close is-large" aria-label="close" id="closeM"></button>
+          </div>
           <div class="column">
             <section class="section is-medium section is-centered">
               <h1 class="title has-text-white" id="test" >Bird Project</h1>
