--- a/secondindex.html
+++ b/secondindex.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
+    <!-- Linking outside programs we used and connecting our pages -->
     <link rel="stylesheet" href="./Assets/css/secondpagestyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +29,7 @@
             <span aria-hidden="true"></span>
           </a>
         </div>
-          
+           <!-- Links back to first page -->
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
             <a class="navbar-item has-text-black" href="index.html">
@@ -39,7 +40,7 @@
               Meet The Team
             </a>
           </div>
-          
+          <!-- link to our Github page -->
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
@@ -52,7 +53,7 @@
         </div>
       </nav>
   
-      <!-- Column 1 Image and Downloand Recording button -->
+      <!-- Column 1 Image and Downloand Recording button, as well as displays API data -->
       <section class="section is-large">
       <div class="columns">
         <div class="column is-centered">
