--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <h3 class="subtitle has-text-white">
         <ul>
           <li><a class= "teamLinks" href="https://github.com/MichaelFormico">Michael Formico</a></li>
-          <li><a class= "teamLinks" href="https://github.com/Oscarl214">Oscar Leah</a></li>
+          <li><a class= "teamLinks" href="https://github.com/Oscarl214">Oscar Leal</a></li>
           <li><a class= "teamLinks" href="https://github.com/noahbtaylor">Noah Taylor</a></li>
           <li><a class= "teamLinks" href="https://github.com/Whitney15">Whitney White</a></li>
         </ul>
